[package]
name = "hydroflow-kvs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = [ "derive" ] }
hydroflow = { git = "https://github.com/hydro-project/hydroflow" }
regex = "1.7.0"
serde = "1.0.149"
